chore: debug and emulator config

--- a/packages/app/.env
+++ b/packages/app/.env
@@ -12,8 +12,9 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET="poolbasefyi.appspot.com"
 NEXT_PUBLIC_FIREBASE_MESSAGINGSENDER_ID="846536999829"
 NEXT_PUBLIC_FIREBASE_APP_ID= "1:846536999829:web:49e0728eec1abf65066c9c"
 NEXT_PUBLIC_FIREBASE_CLIENT_EMAIL="firebase-adminsdk-gur2j@poolbasefyi.iam.gserviceaccount.com"
-NEXT_PUBLIC_FIRESTORE_EMULATOR_HOST="localhost:8080"
+FIRESTORE_EMULATOR_HOST="localhost:8080"
 
+CONSOLA_LEVEL=1
 # Create another file in this directory named ".env.local", which you
 # should not include in source control. In .env.local, set these secret
 # environment variables:
