--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.2",
   "description": "",
   "scripts": {
-    "start": "NODE_ENV=development next dev",
+    "start": "NODE_OPTIONS='--inspect' NODE_ENV=development next dev",
     "dev": "yarn start",
     "serve": "NODE_ENV=production next start",
     "build": "ANALYZE=true NODE_ENV=production next build",
