--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,21 +13,20 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v1
         with:
-          node-version: 10
+          node-version: 12
       - name: Get yarn cache dir
-        id: yarn-cache
+        id: yarn-cache-dir
         run: echo "::set-output name=dir::$(yarn cache dir)"
       - name: Prepare yarn cache
-        uses: actions/cache@v1
+        uses: actions/cache@v2
+        id: yarn-cache
         with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
+          path: ${{ steps.yarn-cache-dir.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
       - name: Install Node Dependencies
         run: yarn install --frozen-lockfile
-      - name: Build Styleguide
-        run: yarn workspace design-system styleguide:build
       - name: Do Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
