--- a/packages/browser-extension/package.json
+++ b/packages/browser-extension/package.json
@@ -88,6 +88,7 @@
     "semantic-release-monorepo": "^7.0.2",
     "style-loader": "^1.2.1",
     "ts-loader": "^8.0.3",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
     "typescript": "~4.0.2",
     "webpack": "4.44.1",
     "webpack-cli": "^3.3.11",
