--- a/packages/browser-extension/tsconfig.json
+++ b/packages/browser-extension/tsconfig.json
@@ -13,7 +13,11 @@
     "allowJs": false,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "noEmit": false
+    "noEmit": false,
+    "baseUrl": ".",
+    "paths": {
+      "app/*": ["../app/*"]
+    }
   },
   "exclude": ["utils", "node_modules"],
   "include": ["**/*.ts", "**/*.tsx", "../../locales/**/*.ts"]
