--- a/packages/firebase/package.json
+++ b/packages/firebase/package.json
@@ -99,6 +99,7 @@
     "typescript": "^4.0.2",
     "uuid": "^8.3.0",
     "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^2.5.2"
   }
 }
