--- a/packages/browser-extension/package.json
+++ b/packages/browser-extension/package.json
@@ -38,62 +38,62 @@
   "dependencies": {
     "consola": "^2.15.0",
     "dotenv": "^8.2.0",
-    "dotenv-webpack": "^2.0.0",
+    "dotenv-webpack": "^3.0.0",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-firebase-hooks": "^2.2.0",
-    "react-i18next": "^11.7.2"
+    "react-i18next": "^11.7.3"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.13.0",
+    "@hot-loader/react-dom": "^17.0.0-rc.2",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.0.5",
+    "@semantic-release/github": "^7.1.1",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/chrome": "0.0.122",
+    "@types/chrome": "0.0.123",
     "@types/copy-webpack-plugin": "^6.0.0",
-    "@types/dotenv-webpack": "^1.8.0",
-    "@types/eslint": "^7.2.2",
+    "@types/dotenv-webpack": "^3.0.0",
+    "@types/eslint": "^7.2.3",
     "@types/file-loader": "^4.2.0",
     "@types/fs-extra": "^9.0.1",
-    "@types/prettier": "^2.1.0",
+    "@types/prettier": "^2.1.1",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.7",
     "@types/semantic-release": "^17.1.0",
     "@types/webpack": "4.41.22",
     "@types/webpack-dev-server": "3.11.0",
     "@types/webpack-merge": "~4.1.5",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^6.1.0",
-    "css-loader": "^4.2.2",
-    "eslint": "^7.8.1",
+    "copy-webpack-plugin": "^6.1.1",
+    "css-loader": "^4.3.0",
+    "eslint": "^7.9.0",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
+    "eslint-plugin-react": "^7.21.1",
+    "eslint-plugin-react-hooks": "^4.1.2",
     "file-loader": "^6.1.0",
     "fs-extra": "^9.0.0",
-    "html-loader": "1.3.0",
-    "html-webpack-plugin": "^4.4.1",
-    "prettier": "^2.1.1",
-    "react-hot-loader": "^4.12.21",
-    "semantic-release": "^17.0.7",
-    "semantic-release-monorepo": "^7.0.2",
+    "html-loader": "1.3.1",
+    "html-webpack-plugin": "^4.5.0",
+    "prettier": "^2.1.2",
+    "react-hot-loader": "^4.13.0",
+    "semantic-release": "^17.1.2",
+    "semantic-release-monorepo": "^7.0.3",
     "style-loader": "^1.2.1",
-    "ts-loader": "^8.0.3",
+    "ts-loader": "^8.0.4",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "~4.0.2",
-    "webpack": "4.44.1",
+    "typescript": "~4.0.3",
+    "webpack": "4.44.2",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "3.11.0",
-    "webpack-merge": "~5.1.3",
+    "webpack-merge": "~5.1.4",
     "write-file-webpack-plugin": "^4.5.1"
   }
 }
