--- a/packages/firebase/package.json
+++ b/packages/firebase/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "start": "NODE_ENV=development firebase emulators:start",
+    "start": "NODE_ENV=development firebase emulators:start --import=./test-data --export-on-exit",
     "dev": "yarn start",
     "build": "webpack",
     "watch": "webpack --watch --progress",
@@ -52,15 +52,15 @@
   },
   "dependencies": {
     "@elastic/app-search-node": "^7.9.0",
-    "@elastic/elasticsearch": "^7.9.0",
+    "@elastic/elasticsearch": "^7.9.1",
     "consola": "^2.15.0",
-    "firebase": "^7.19.1",
-    "firebase-admin": "^9.1.1",
+    "firebase": "^7.21.0",
+    "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.11.0",
     "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.20",
-    "puppeteer": "^5.2.1",
-    "zod": "^1.10.3"
+    "puppeteer": "^5.3.1",
+    "zod": "^1.11.9"
   },
   "devDependencies": {
     "@firebase/testing": "^0.20.11",
@@ -70,35 +70,35 @@
     "@semantic-release/git": "^9.0.0",
     "@semantic-release/github": "^7.0.5",
     "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/eslint": "^7.2.2",
+    "@types/eslint": "^7.2.3",
     "@types/eslint-plugin-prettier": "^3.1.0",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.14",
     "@types/lodash": "^4.14.160",
-    "@types/node": "^14.6.1",
-    "@types/prettier": "^2.1.0",
-    "@types/puppeteer": "^3.0.1",
+    "@types/node": "^14.11.2",
+    "@types/prettier": "^2.1.1",
+    "@types/puppeteer": "^3.0.2",
     "@types/rimraf": "^3.0.0",
     "@types/semantic-release": "^17.1.0",
     "@types/uuid": "^8.3.0",
-    "@types/webpack": "^4.41.21",
+    "@types/webpack": "^4.41.22",
     "@types/webpack-node-externals": "^2.5.0",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
-    "@typescript-eslint/parser": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
     "copy-pkg-json-webpack-plugin": "^0.0.39",
-    "eslint": "^7.7.0",
+    "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react": "^7.21.1",
     "jest": "26.4.2",
-    "prettier": "^2.1.1",
+    "prettier": "^2.1.2",
     "rimraf": "^3.0.1",
-    "semantic-release": "^17.0.7",
-    "semantic-release-monorepo": "^7.0.2",
-    "ts-jest": "^26.3.0",
-    "ts-loader": "^8.0.3",
-    "typescript": "^4.0.2",
+    "semantic-release": "^17.1.2",
+    "semantic-release-monorepo": "^7.0.3",
+    "ts-jest": "^26.4.0",
+    "ts-loader": "^8.0.4",
+    "typescript": "^4.0.3",
     "uuid": "^8.3.0",
-    "webpack": "^4.44.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.3.11",
     "webpack-node-externals": "^2.5.2"
   }
