--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -45,6 +45,8 @@
   "license": "MIT",
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
+    "@elastic/react-search-ui": "^1.4.1",
+    "@elastic/search-ui-app-search-connector": "^1.4.1",
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
     "@next/bundle-analyzer": "^9.5.3",
@@ -83,6 +85,7 @@
     "@types/eslint": "^7.2.3",
     "@types/eslint-plugin-prettier": "^3.1.0",
     "@types/jest": "^26.0.14",
+    "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.161",
     "@types/node": "^14.11.2",
     "@types/prettier": "^2.1.1",
